--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,32 @@
 
+.App .container {
+  font-family: "Spartan", sans-serif;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  border: 1px solid #ffffff;
+  border-radius: 4px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  padding: 30px;
+  max-width: 750px;
+  margin: 40px auto;
+
+  background: #1a2980; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #26d0ce,
+    #1a2980
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #26d0ce,
+    #1a2980
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 .App footer{
+  text-align: left;
   position: relative;
-  left:265px;
-  bottom:20px;
+  right: 30px;
+  top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
