--- a/src/Weather.css
+++ b/src/Weather.css
@@ -34,6 +34,7 @@
     font-weight: 500;
   }
   .Weather .current-weather {
+    font-size: 20px;
     list-style: none;
     color: #ffffff;
     position: relative;
