--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,23 +16,26 @@
   .weather-units .active:hover {
     text-decoration: none;
   }
-  .Weather .units {
+  .Weather .unit {
     text-decoration: none;
     font-size: 18px;
     color: #ffffff;
     position: relative;
     top: -30px;
-    left: 5px;
+    margin-left:3px;
+    
   }
   .Weather canvas{
     margin-right: 8px;
     position: relative;
     top:10px
+    
   }
   .Weather  .temperature {
     color: #ffffff;
     font-size: 60px;
     font-weight: 500;
+
   }
   .Weather .current-weather {
     font-size: 20px;
